fix big screen h2 align

--- a/css/how_we_work.css
+++ b/css/how_we_work.css
@@ -12,7 +12,7 @@
 }
 
 #how_we_work .shadow {
-    left: 55px;
+    left: 333px;
     z-index: -1;
     color: #E6E6E6;
     opacity: 0.25;
