--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,6 @@ h2 {
     text-align: center;
     position: relative;
     white-space: nowrap;
-    width: 1293px;
 }
 
 span.shadow {
